[metadata]
name = kHTGui
version = 1.0.0
author = Karunakar
author_email = karunakar.kintada@gmail.com
description = GUI to select the stations in kHilltopConnector module
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hawkes-bay-rc/kHTGui
project_urls =
    Bug Tracker = https://github.com/hawkes-bay-rc/kHTGui/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src